--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  syncfusion_flutter_charts: ^24.2.3+1
+  fl_chart: 0.66.1
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +64,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/Assets/
+    - lib/Assets/classdiary.png
 #    - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
