--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
     - lib/Assets/TT.png
     - lib/Assets/rcard.png
     - lib/Assets/bus.png
+    - lib/Assets/report-card(1).png
 #    - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
